getting nearest buses times and order

--- a/mira_app/templates/mira.html
+++ b/mira_app/templates/mira.html
@@ -25,10 +25,10 @@
     </div>
     <div id="date">
         <div id="date-day">
-            <span class="text-small-half light">tuesday</span>
+            <span class="text-small-half light"></span>
         </div>
         <div id="date-year">
-            <span class="text-small-half light">08.03.2020</span>
+            <span class="text-small-half light"></span>
         </div>
     </div>
 </div>
@@ -79,7 +79,22 @@
     <hr class="title-hr">
 </div>
 
-<div id="public-transport-container"></div>
+<div id="public-transport-container">
+    <div id="b182" class="public-transport">
+        <table border="2">
+            <tr>
+                <td class="line-number"></td>
+                <td class="line-destination"></td>
+            </tr>
+            <tr>
+                <td colspan="2" class="hours"></td>
+            </tr>
+            <tr>
+                <td colspan="2" class="next"></td>
+            </tr>
+        </table>
+    </div>
+</div>
 
 </body>
 </html>
