--- a/mira_app/static/mira_app/css/mira.css
+++ b/mira_app/static/mira_app/css/mira.css
@@ -16,6 +16,40 @@
        url('../fonts/MYRIADPRO-BOLDCOND.OTF') format("truetype");
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+
+/*for gesture scrolling purposes*/
+html {
+    overflow: scroll;
+    overflow-x: hidden;
+}
+::-webkit-scrollbar {
+    width: 0px;  /* Remove scrollbar space */
+    background: transparent;  /* Optional: just make scrollbar invisible */
+}
+/* Optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+    background: #FF0000;
+}
+
+#datetime-container {
+    position: fixed;
+    background-color: black;
+    box-shadow: 4px 2px 10px 10px #000000;
+    z-index: 99;
+    width: 325px;
+}
+
+#space {
+    width: 100%;
+    height: 50px;
+}
+
+
+
 html, body {
     margin: 0;
     padding: 0;
@@ -28,10 +62,6 @@ body {
     color: white;
     font-family: MyriadNormal, serif;
 }
-
-/*body > * {*/
-/*    float: right;*/
-/*}*/
 
 .light {
     font-family: MyriadLight, serif;
@@ -220,6 +250,10 @@ body {
     font-size: 15px;
 }
 
+.cart-info {
+    font-family: MyriadNormal, serif;
+}
+
 table.public-transport {
     width: 100%;
     font-size: 20px;
@@ -262,4 +296,18 @@ table.public-transport .transport-destination {
 
 #public-transport-container > *:not(:first-child) {
     margin-top: 15px;
+}
+
+#qr {
+    float: right;
+    width: 100px;
+    height: 100px;
+    /*background-color: #ffffff;*/
+    position: absolute;
+    top: 35px;
+    left: 400px;
+}
+
+#qr img {
+    /*margin: 10px auto auto;*/
 }
